[Fix] Better dark mode

--- a/src/theme/globals.css
+++ b/src/theme/globals.css
@@ -77,12 +77,18 @@ input {
 
 /* Dark colors */
 
+.vc-dark {
+    --vc-color: #fff;
+    --vc-bg: #101311;
+    --vc-border: var(--ion-color-medium);
+}
+
 body.dark .inset-background, .inset-background ion-toolbar {
     --background: #000000;
 }
 
 body.dark ion-item {
-    --ion-item-background: #1A211C;
+    --ion-item-background: #101311;
 }
 
 body.dark ion-modal .inset-background, ion-modal .inset-background ion-toolbar {
@@ -107,7 +113,7 @@ body.dark .dule-face-icon *:not(:nth-child(1)) {
 
 .ion-border {
     border-width: 0.55px;
-    border-color: var(--ion-color-light-shade);
+    border-color: var(--ion-item-border-color, var(--ion-border-color, var(--ion-color-step-250, #c8c7cc)));
     border-style: solid;
 }
 
@@ -118,7 +124,7 @@ body.dark .dule-face-icon *:not(:nth-child(1)) {
 
 .ion-toggle-border::part(track) {
     border-width: 0.55px;
-    border-color: var(--ion-color-light-shade);
+    border-color: var(--ion-item-border-color, var(--ion-border-color, var(--ion-color-step-250, #c8c7cc)));
     border-style: solid;
 }
 
